# pubmed_pharma_fetcher

./: README.md  cli.py  pyproject.toml  results.csv
pubmed_pharma_fetcher/: __init__.py  api.py  heuristics.py  models.py  parser.py  utils.py
tests/: test_api.py  test_cli.py  test_heuristics.py  test_parser.py  test_utils.py
