[project]
name = "pubmed-pharma-fetcher"
version = "0.1.0"
description = "Fetch PubMed papers with pharma/biotech authors via CLI"
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "email-validator (>=2.2.0,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
responses = "^0.25.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "cli:app"
